вычитали до результатов

--- a/article_IP.tex
+++ b/article_IP.tex
@@ -112,7 +112,7 @@
 
 {\sc Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.}
 
-{\large { \uppercase {\bf Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей}}}
+{\large { \uppercase {\bf Исследование доступности сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей}}}
 
 \end{center}
 
@@ -124,17 +124,9 @@
 
 {\footnotesize
 
-\noindent {\it Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} {\bf Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}\\
+\noindent {\it Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} {\bf Исследование доступности сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}\\
 {\bf Аннотация.} 
-Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть, сервисы которой, позволяют повысить безопасность и комфорт передвижения абонентов сети.  
-
-Проблемой обеспечения информационного обмена является отсутствие непрерывно существующего выделенного беспроводного канала связи.
-
-Предложено решение, позволяющее увеличить время доступности сетевых сервисов, применением mesh сети с использованием мультипротокольного сетевого интерфейса, обеспечивающего передачу экстренных сообщений средствами доступных сетей передачи данных.
-
-Сформирована модель передачи сообщений, увеличивающая вероятность доставки экстренных сообщений. 
-
-В статье проанализированы результаты моделирования времени доступности облачных сервисов обмена экстренными сообщениями в различных конфигурациях автомобильной mesh сети, свойств сетевого трафика и особенностей организации дорожного движения. \\
+Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть, сервисы которой, позволяют повысить безопасность и комфорт передвижения участников дорожного движения. Проблемой обеспечения информационного обмена является отсутствие постоянного выделенного беспроводного канала связи. В статье предложено решение, позволяющее увеличить время доступности сервисов облачной среды, состоящее в дополнении индивидуального выделенного канала mesh сетью. В этом случае функции маршрутизации принимает на себя мультипротокольный сетевой узел. Описана имитационная модель сети передачи экстренных сообщений и сформулирован перечень параметров моделирования. Результаты моделирования демонстрируют увеличение времени доступности сервисов облачной среды обмена экстренными сообщениями в различных конфигурациях автомобильной mesh сети, свойств сетевого трафика и особенностей организации дорожного движения.\\
 {\bf Ключевые слова:}
 автомобильные сервисы, mesh, 802.11s, LTE, IDM, облачные сервисы, мультипротокольный узел, протоколы передачи данных, протоколы маршрутизации, имитационное моделирование, ns--3.
 
@@ -143,7 +135,7 @@
 \noindent {\it Glazunov V.\,V., Kurochkin L.\,M., Kurochkin M.\,A., Popov S.\,G.\/} {\bf Atricle title Atricle title Atricle title Atricle title Atricle title Atricle title  Atricle title  Atricle title.}\\
 {\bf Abstract.} 
 Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min,  Abstract text 8 line min.\\
-{\bf Keywords:} 
+{\bf Keywords: vehicle service} 
 Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords.
 
 } % end footnotesize
