--- a/auto.tex
+++ b/auto.tex
@@ -5,7 +5,7 @@
 
 \item[$-$] мониторинга технического состояния автомобилей;
 
-\item[$-$] осуществления финансовых расчётов при эксплуатации автомобиля;
+\item[$-$] выполнения финансовых расчётов при эксплуатации автомобиля;
 
 \item[$-$] комплексного решения эксплуатационных и транспортных задач;
 
@@ -17,76 +17,41 @@
 
 \end{enumerate}
 
+Типичной реализацией технологии пользовательских автомобильных сервисов является облачная среда.
 
 {\bf{\SetMySubSection} Категории абонентов информационных услуг.} Потребителями информационных услуг подразделяются на несколько категорий абонентов, в первую категорию попадают облачные службы, предоставляющие непосредственно услуги водителям, во вторую - сами участники движения: водители и пассажиры автомобилей, в третью - элементы дорожной инфраструктуры и специальные транспортные средства. 
 
-
-
-{\bf{\SetMySubSection}Набор функций для пользователей информационных услуг.} Телематические услуги предоставляемые различным категориям абонентов:
+{\bf{\SetMySubSection}Перечень функций пользователей информационных услуг.} Телематические услуги предоставляемые всем категориям абонентов:
 
 \begin{itemize}
 
-\item[$-$] Сообщение о погодных условиях и состоянии дорожного покрытия. 
+\item[$-$] сообщение о погодных условиях и состоянии дорожного покрытия; 
 
+\item[$-$] оперативные изменения в транспортной сети;
 
-\item[$-$] Оперативные изменения в транспортной сети.
+\item[$-$] сообщение о правилах регулирования дорожного движения; 
 
-\item[$-$] Сообщение о правилах регулирования дорожного движения. 
+\item[$-$] сбор и отображение данных о местоположении автомобилей других участников движения; 
 
+\item[$-$] автоматическое сохранение треков движения транспортного средства с видеофиксацией ключевых точек движения по времени или по событию;
 
-\item[$-$] Сбор и отображение данных о местоположении автомобилей других участников движения. 
-
-\item[$-$] Автоматическое сохранение треков движения транспортного средства с видеофиксацией ключевых точек движения по времени или по событию.
-
-\item[$-$] Уточнение данных о дорожной обстановке в центре управления транспортными средствами.
+\item[$-$] уточнение данных о дорожной обстановке в центре управления транспортными средствами;
  
+\item[$-$] автоматическая оплата услуг (дорог, парковок, топлива);
 
+\item[$-$] отправка сообщений <<SOS>>;
 
-\item[$-$] Автоматическая оплата услуг (дорог, парковок, топлива).
+\item[$-$] срабатывание датчиков охранного комплекса и/или угон автомобиля;
 
-\item[$-$] Отправка сообщений <<SOS>>.
+\item[$-$] аудио и видео консультации водителя о техническом состоянии автомобиля;
 
-\item[$-$] Срабатывание датчиков охранного комплекса и/или угон автомобиля
+\item[$-$] дистанционный сбор данных об отказах и сбоях оборудования;
 
+\item[$-$] дистанционная загрузка новых версий программного обеспечения, учитывающего особенности эксплуатации конкретного автомобиля;
 
-\item[$-$] Аудио и видео консультации водителя о техническом состоянии автомобиля
+\item[$-$] дистанционное управление агрегатами автомобиля: двигатель, трансмиссия, устройства освещения;
 
-\item[$-$] Дистанционный сбор данных об отказах и сбоях оборудования
-
-\item[$-$] Дистанционная загрузка новых версий программного обеспечения, учитывающего особенности эксплуатации конкретного автомобиля.
-
-
-\item[$-$] Дистанционное управление агрегатами автомобиля: двигатель, трансмиссия, устройства освещения. 
-
-
-
-
-\item[$-$] Телекоммуникационная среда для пассажиров автомобилей. В данную услугу входят такие сервисы, как: 
-
-\begin{itemize}
-
-\item[$-$] Подключение к удалённым сервисам через мобильную сеть (личная электронная почта, социальные сети, блоги, микросообщения).
-
-\item[$-$] Организация виртуальной локальной сети между автомобилями с целью передачи речи и видеопотока.
-
-\item[$-$] Доступ в глобальную сеть.
-
+\item[$-$] Телекоммуникационная среда для пассажиров автомобилей. К ней относится: подключение к удалённым сервисам через мобильную сеть (личная электронная почта, социальные сети, блоги, микросообщения); организация виртуальной локальной сети между автомобилями с целью передачи речи и видеопотока и доступ в глобальную сеть;
 \end{itemize}
 
-\end{itemize}
-
-Большие объёмы данных характерны для: 
-
-\begin{itemize}
-
-\item[$-$] Автоматического сохранения треков движения транспортного средства с видеофиксацией ключевых точек движения по времени или по событию. 
-
-\item[$-$] Дистанционной загрузки новых версий программного обеспечения бортового компьютера. 
-
-\item[$-$] Поддержки телекоммуникационной среды для пассажиров автомобилей.
-
-\item[$-$] Проведения видео консультаций водителя автомобиля.
-
-\end{itemize}
-
-Данная классификация показывает, что для наиболее приоритетных сообщений, определяющих безопасность движения, характерны малые объёмы. Кроме этого одна часть данных этой категории предназначена для региональных служб, а другая для удалённых пользователей.
+Предложенная классификация позволяет выделить класс критически важных сервисов, влияющих на уровень безопасности движения, к которым относятся экстренные сообщения. 
