--- a/implementation.tex
+++ b/implementation.tex
@@ -1,8 +1,8 @@
-{\bf{\SetMySection} Реализация среды моделирования передачи сообщений в сети автомобилей.} Основным методом исследования является имитационное моделирование работы сети в среде ns-3 (дискретно-событийный стимулятор телекоммуникационных систем\cite{Nsnam.org}).
+{\bf{\SetMySection} Реализация среды моделирования передачи сообщений в сети автомобилей.} Основным методом исследования времени доступности является имитационное моделирование функционирования абонентов сети в среде ns--3 (дискретно-событийный стимулятор телекоммуникационных систем\cite{Nsnam.org}).
  
-Симулятор ns-3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns--3 открыты для исследования, модификации и использования и доступны на сайте проекта\cite{Nsnam.org}. В качестве встроенного языка описания моделей используются: C++ и Python.
+Симулятор ns--3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns--3 открыты для исследования, модификации и использования и доступны на сайте проекта\cite{Nsnam.org}. В качестве встроенного языка описания моделей используются: C++ и Python.
 
-В ns-3 разработаны модели как проводных, так и беспроводных сетей, позволяющие проводить моделирование смешанных сетей с топологиями различной сложности. Особый интерес в рамках данной работы представляет реализация mesh сетей на основе стека протоколов 802.11s.
+В ns--3 разработаны модели как проводных, так и беспроводных сетей, позволяющие проводить моделирование смешанных сетей с топологиями различной сложности. Особый интерес в рамках данной работы представляет реализация mesh сетей на основе стека протоколов 802.11s.
 
 Для построения транспортной сети и моделирования движения транспорта применена модель движения транспорта Intelligent Driver Model (IDM)\cite{5678993}.
 
@@ -12,14 +12,10 @@
 
 \begin{itemize}
 
-\item[$-$] изменение параметров: число абонентов, топология сети, закон изменения движения, протокол передачи данных, размер и интенсивность появления пакетов;
+\item[$-$] параметры модели: число абонентов, расположение абонентов, характеристики движения, размер и интенсивность появления пакетов;
 
-\item[$-$] сбор статистики после проведённой симуляции;
-
-\item[$-$] автоматический запуск набора экспериментов с различными параметрами;
-
-\item[$-$] конфигурация эксперимента как входной набор параметров в виде файла.
-
+\item[$-$] изменение протоколов маршрутизации;
+ 
 \end{itemize}
 
 \begin{figure}[!ht]
@@ -31,20 +27,20 @@
 \vspace{-6pt}
 \end{figure}
 
-На рисунке ~\ref{fig:architecture} приведена разработанная структура среды модели мультипротокольной сети.
+На рисунке ~\ref{fig:architecture} приведена схема взаимодейсвия модулей модели мультипротокольной сети со средой моделирования ns--3.
 
-Реализованная модель содержит следующие модули ns-3: 
+В модели используются стандартные модули ns-3 и утилиты анализа результатов экспериментов: 
 
 \begin{itemize}
 
 \item[$-$]Модель интерфейса 802.11s\cite{Andreev}. Реализация допускает применение протокола маршрутизации HWMP в режиме с использованием корневого узла и с построением маршрута передачи по запросу, кроме этого будут использованы протоколы маршрутизации для беспроводных mesh сетей: OLSR, AODV, DSDV.
 -Реализации моделей протоколов маршрутизации в беспроводных сетях HWMP, OLSR, AODV, DSDV\cite{Narra:2011:DDV:2151054.2151132}.
 
-\item[$-$]FlowMonitor - модуль сбора и обработки статистики сетевого трафика, предоставляющий разнообразные методы сбора характеристик моделируемых сетевых устройств и каналов связи. 
+\item[$-$]FlowMonitor --- модуль сбора и обработки статистики сетевого трафика, предоставляющий разнообразные методы сбора характеристик моделируемых сетевых устройств и каналов связи. 
 
-\item[$-$]WireShark анализатор трафика компьютерных сетей, предоставляющий широкие возможности по фильтрации и сортировке данных трафика различных сетевых протоколов.
+\item[$-$]WireShark --- анализатор трафика компьютерных сетей, предоставляющий широкие возможности по фильтрации и сортировке данных трафика различных сетевых протоколов.
  
-\item[$-$]PyViz модуль визуализации моделей, позволяющий отображать топологию моделируемой сети, потоки данных, характеристики интерфейсов и каналов, а также их изменения на протяжении симуляции.
+\item[$-$]PyViz --- модуль визуализации моделей, позволяющий отображать топологию моделируемой сети, потоки данных, характеристики интерфейсов и каналов, а также их изменения на протяжении симуляции.
 
 \end{itemize}
 
@@ -53,12 +49,8 @@
 Для реализации комбинации беспроводных сетей разработана модель подвижного мультипротокольного узла с набором сетевых интерфейсов. Для реализации мультипротокольного узла добавлен новый класс, позволяющий комбинировать интерфейсы стандартов: 802.11abg, 802.11s, 802.11p, LTE. 
 
 {\bf{\SetMySubSection} Реализация мультипротокольного узла в среде моделирования.}
-Для проведения эксперимента была создана модель узла позволяющая осуществлять доставку пакетов между мультипротокольными узлами mesh-сети для сетей 802.11s и LTE.
-Такая схема взаимодействия потребовала, дополнительно создания виртуального интерфейса, через который бы происходила маршрутизация между сетями.
-
+Для проведения эксперимента была создана модель узла, позволяющая осуществлять доставку пакетов между интерфейсом mesh-сети для сетей 802.11s и интерфейсом LTE. Модель мультипротокольного узла реализована добавлением виртуального узла точка--точка, обеспечивающего передачу маршрутизируемых пакетов между интерфейсами 802.11s и LTE.
 Модель узла реализующая функцию маршрутизации сообщений между сетями передачи данных 802.11s и LTE показана на рисунке~\ref{fig:multiprotocol_realisation}.
-Реализация мультипротокольного узла выполнена на основе виртуального узла точка-точка, обеспечивающего промежуточное взаимодействие между интерфейсами 802.11s и LTE.
-
 
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -71,6 +63,6 @@
 
 Алгоритм инициализации и функционирования мультипротокольного узла приведён в статье ~\cite{Instrumental}.
 
-В процессе моделирования перемещение мультипротокольного подвижного узла осуществляется путем задания параметров схемы движения транспортного средства. Координаты мультипротокольного мобильного узла наследуются от координат транспортного средства. Перемещение узла осуществляется дискретно с интервалом 0.1 секунда, в течение всего периода моделирования.
+Мультипротокольный узел связан с транспортным средством, его координаты  наследуются от координат автомобиля. Перемещение автомобиля осуществляется дискретно с интервалом 0.1 секунда, в течение всего периода моделирования.
 
-{\bf{\SetMySubSection} Параметры эксперимента.} Для проведения исследований разработана технология инициализации параметров: распределение событий связанных с перемещением абонента (изменение скорости и характера движения); процент потерь пакетов в канале; применяемые протоколы маршрутизации; скорость передачи данных; число узлов в моделируемой сети; количество узлов ведущих одновременную передачу; размер передаваемых пакетов; тип транспортного протокола передачи данных. В процессе моделирования измеряемыми параметрами являются: время отправки пакета, время получения пакета, число потерянных пакетов, число отправленных пакетов, размер пакетов, IP адреса источников и получателей сообщений.
+{\bf{\SetMySubSection} Параметры эксперимента.} Для проведения исследований разработана пакетная технология инициализации параметров моделирования, обеспечивающая изменения значений параметров модели, к которым относятся:  изменение скорости и траектории движения; протокол маршрутизации; тип транспортного протокола передачи данных; скорость передачи данных; число узлов сети; количество узлов ведущих одновременную передачу; размер передаваемых пакетов; процент потерь пакетов в канале. В процессе моделирования для каждого узла регистрируется: время отправки пакета, время получения пакета, число потерянных пакетов, число отправленных пакетов, размер пакетов, IP адреса источников и получателей сообщений. Данные сохраняются в XML файл и доступны для последующего анализа.
