--- a/telematics.tex
+++ b/telematics.tex
@@ -1,6 +1,6 @@
-{\bf{\SetMySection} Телематические технологии доступа к сервисам.} Увеличение объема двунаправленного потока сообщений, обеспечивающего информационную поддержку автомобильного движения формирует всё новые требования к обеспечению информационной поддержки автомобильных сетей\cite{Road}.
+{\bf{\SetMySection} Телематические технологии доступа к сервисам.} Увеличение объёма двунаправленного потока сообщений, обеспечивающего информационную поддержку автомобильного движения формирует новые требования к обеспечению технологий информационного обмена в автомобильных сетях\cite{Road}.
 
-В настоящее время наиболее распространёнными технологиями передачи данных в беспроводных глобальных сетях являются:
+В настоящее время в автомобильных сетях активно используются беспроводные технологии передачи данных:
 
 \begin{itemize}
 
@@ -12,36 +12,9 @@
 
 Они обеспечивают устойчивую связь автомобиля в зоне прямой видимости стационарной станции при скорости движения автомобиля до 120 км/ч. В зонах со сложным рельефом качество связи снижается, а при отсутствии передающих станций связь пропадает.
 
-Ключевым вопросом является интеграция мобильных ресурсов с инфраструктурой региона, подразумевающая контакт со службами, управления движением, сервисным обслуживанием, порталом производителя, поиск соседних автомобилей --- клиентов заданных сервисов, без использования выхода в глобальные сети передачи данных.
+Ключевым вопросом является интеграция мобильных ресурсов с сервисами облачной среды, подразумевающая контакт со службами управления движением, сервиса, порталом производителя автомобиля, взаимодействие с соседними автомобилями без взаимодействия с глобальными сетями передачи данных.
 
-
-
-Обеспечение реализации мобильной массовой беспроводной сети передачи данных связано с рядом ключевых проблем:
-
-\begin{itemize}
-
-\item[$-$] несовместимостью сетевого оборудования;
-
-\item[$-$] повышением издержек на внедрение новых технологий;
-
-\item[$-$] обеспечением надежности и высокой скорости передачи сообщений.
-
-\end{itemize}
-
-Возможными решениями этих проблем могут стать:
-\begin{itemize}
-
-\item[$-$] разработка универсального реконфигурируемого устройства, адаптирующегося под конкретные каналы и протоколы передачи данных\cite{Seong-Youp};
-
-\item[$-$] стандартизация частотного спектра передачи сигналов; 
-
-\item[$-$] использование перспективных сетевых технологий, не получивших на данный момент широкого распространения (мобильный WiMAX, WiFi 802.11ac);
-
-\item[$-$] разделение задач  определения топологии сети и передачи данных.
-
-\end{itemize}
-
-Беспроводные локальные сети (WLAN --- Wireless Local Area Networks) подразделяются по топологии на: 
+Беспроводные локальные сети подразделяются по топологии на: 
 \begin{itemize}
 
 \item[$-$] <<Точка-точка>> --- Peer to Peer или ADHOC;
@@ -52,21 +25,51 @@
 
 \end{itemize}
 
-Автомобиль (узел сети) содержит различные устройства для подключения к локальным сетям. Подключение осуществляется, используя различные технологии, для получения доступа к необходимым сетевым сервисам и данным.
+В условиях высокой динамики автомобильной сети перспективной технологией взаимодействия абонентов является режим mesh, обеспечивающий процедуры самоорганизации абонентов.
 
-Перспективным направлением при передаче коротких сообщений между автомобилями и дорожной инфраструктурой является беспроводная технология соединения с автомобилями --- DSRC. 
-В настоящее время стационарные передатчики дорожной инфраструктуры предназначены для трансляции на борт транспортного средства сообщений о дорожной обстановке. 
-Они позволяют информировать водителей транспортных средств и дорожную инфраструктуру о состоянии светофоров и дорожных знаков, фактах сокращения дистанций и интервалов между транспортными средствами, наличии заторов и инцидентов на дороге. 
- 
+Реализация массовой мобильной беспроводной автомобильной сети передачи данных связано с решением ключевых проблем:
+
+\begin{itemize}
+
+\item[$-$] несовместимостью сетевого оборудования;
+
+\item[$-$] повышением издержек на внедрение новых технологий;
+
+\item[$-$] обеспечением надёжности и высокой скорости передачи сообщений.
+
+\end{itemize}
+
+Возможными путями решения этих проблем являются:
+\begin{itemize}
+
+\item[$-$] стандартизация частотного спектра передачи сигналов; 
+
+\item[$-$] использование перспективных сетевых технологий: мобильный WiMAX, WiFi 802.11ac;
+
+\item[$-$] разработка протоколов формирования путей передачи данных;
+
+\item[$-$] разработка универсального реконфигурируемого устройства, адаптирующегося под конкретные каналы и протоколы передачи данных\cite{Seong-Youp}.
+
+\end{itemize}
+
+Современный автомобиль может поддерживать несколько устройств для подключения к локальным сетям одновременно, подключение осуществляется с использованием различных технологий, что усложняет конструкцию автомобиля и является препятствием на пути интеграции сервисов облачной среды.
+
+Перспективным направлением при передаче коротких сообщений между автомобилями и дорожной инфраструктурой является беспроводная технология соединения с автомобилями --- DSRC. В настоящее время стационарные передатчики дорожной инфраструктуры предназначены для трансляции на борт транспортного средства сообщений о дорожной обстановке. Преимуществом технологии является короткое время соединения между стационарными и подвижными передатчиками, высокая скорость передачи данных и поддержание стабильного соединения с транспортными средствами, движущимися на высоких скоростях. Объединение всех устройств в единую сеть обеспечивает непрерывное соединение транспортного средства с дорожной инфраструктурой. Наличие на борту автомобиля приёмопередатчика DSRC позволяет использовать этот канал для доступа к облачной среде, с целью повышения доступности сервисов.
+
+Большинство авторов не рассматривают ситуации, в которых отсутствует непрерывная связь со стационарными ретрансляторами, когда непосредственная передача данных невозможна. В тоже время, если рассматривать каждый автомобиль в качестве подвижного ретранслятора, то обмен сообщениями с облачной средой можно обеспечить путём ретрансляции сообщений через них. При наличии набора точек доступа к облачной среде возникает альтернатива выбора точки передачи сообщений в облачную среду.
+
 \begin{figure}[!ht]
-\vspace{-10pt}
  \centering{
  \epsfig{file = ERA_GLONASS.eps, width = 8cm}
  \caption{Траектории передачи сообщений в мультипротокольной мобильной сети.}
- \label{fig:ERA_GLONASS}}
- \vspace{-6pt}
+ \label{fig:ERA_GLONASS}
+}
 \end{figure}
 
-Преимуществом технологии является короткое время соединения между стационарными и подвижными передатчиками, высокая скорость передачи данных и поддержание стабильного соединения с транспортными средствами, движущимися на высоких скоростях. 
-Особенностью технологии является небольшой радиус действия одного передающего устройства --- от шестисот метров до полутора километров в области прямой радиовидимости. Объединение всех устройств в единую сеть обеспечивает непрерывное соединение транспортного средства с дорожной инфраструктурой. 
+Связь с облаком осуществляться двумя путями: непосредственно автомобилем, оборудованным аппаратурой связи; через стационарный узел. Автомобиль, расположенный вне зоны связи может связаться с облаком через цепочку автомобилей-ретрансляторов. Сеть предусматривает двунаправленную передачу сообщений - от автомобиля в облако и обратно. Пример выбора альтернативных путей передачи сообщений с использованием mesh, DSRC и глобальных каналов связи на примере систем передачи экстренных сообщений систем <<ЭРА-ГЛОНАСС>> и <<eCall>> приведена на рис.~\ref{fig:ERA_GLONASS}.
+
+
+
+
+
 
