--- a/article_IP.tex
+++ b/article_IP.tex
@@ -132,11 +132,11 @@
 
 \vskip 2mm
 
-\noindent {\it Glazunov V.\,V., Kurochkin L.\,M., Kurochkin M.\,A., Popov S.\,G.\/} {\bf .}\\
+\noindent {\it Glazunov V.\,V., Kurochkin L.\,M., Kurochkin M.\,A., Popov S.\,G.\/} {\bf The research service availability of mobile users in cloud oriented multiprotocol network.}\\
 {\bf Abstract.} 
 A set of modern vehicles, road infrastructure and cloud computing resources forms an intelligent transportation network, whose services allow to improve safety and transportation comfort of the traffic participants. Absense of persistent dedicated wireless communication channel is a problem for information exchange provision. Solution suggested in the article allows to increase availability of cloud services by addition of mesh network to dedicated channel. In this case routing abilities are provided by the multiprotocol network node. Simulation model of emergency messages transfer network has been built with the set of simulation parameters. The results obtained show increase in availability of emergency messages exchange cloud services in different configurations of automotive mesh network, network traffic properties and road traffic characteristics.\\
-{\bf Keywords: vehicle service} 
-Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords, Keywords.
+{\bf Keywords:}
+vehicle services, automotive services, cloud services, cloud environment, multiprotocol node, data transfer protocol, routing protocols, network simulation, vehicle, VIN, mesh, 802.11s, LTE, IDM.
 
 } % end footnotesize
 
