--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,19 +1,15 @@
-{\bf{\SetMySection} Заключение.} Современные тенденции  расширения спектра информационных услуг формируют новые задачи позволяющие требующие увеличения времени доступности сетевых облачных сервисов. В результате :
+{\bf{\SetMySection} Заключение.} В результате исследования доступности сетевых облачных сервисов в автомобильных сетях выполнено:
 
 \begin{itemize}
 
-\item[$-$] Поставлена актуальная задача исследования поведения мобильной беспроводной сети передачи данных на основе 802.11s, LTE в направлении использования сервисов облачной среды;
+\item[$-$] сформирована конфигурация мобильной беспроводной сети передачи данных на основе сетей 802.11s, 802.11abg и LTE;
 
-\item[$-$] Разработана имитационная модель беспроводной сети передачи данных, на основании интеллектуальной модели движения транспорта (IDM), отличающаяся от аналогов наличием мультипротокольных узлов, обеспечивающих взаимодействие сетей 802.11s, LTE и облачной среды;
+\item[$-$] конкретизированы параметры модели и их области значений, позволяющие исследовать периоды наибольших изменений структуры и состояния мобильной беспроводной сети передачи данных;
 
-\item[$-$] Выбраны набор параметров и область их значений: протоколы маршрутизации, интенсивность трафика данных, количество узлов сети и т.д., позволяющие исследовать периоды наибольших изменений структуры и состояния мобильной беспроводной сети передачи данных;
+\item[$-$] разработана согласованная имитационная модель движения транспортных средств и с беспроводной сетью избыточной сетью ередачи данных;
 
-\item[$-$] Получены оценки уровня надёжности передачи данных; реальной скорости передачи данных, обеспечиваемых сетью и среднего времени обмена сообщениями узла сети с облачной средой.
+\item[$-$] реализована модель мультипротокольного узла. Созданная модель обеспечивает маршрутизацию между  сетевыми интерфейсами и позволяет реализовывать сценарии моделирования автомобильных mesh сетей с произвольной комбинацией протоколов: 802.11s, 802.11p, 802.11abg, LTE; 
 
-\item[$-$] Средствами дискретно-событийного симулятора ns-3 разработана модель мультипротокольного узла. Созданная модель обеспечивает маршрутизацию между доступными сетевыми интерфейсами и позволяет реализовывать сценарии моделирования автомобильных mesh сетей с произвольной комбинацией протоколов: 802.11s, 802.11p, 802.11abg, LTE; 
+\item[$-$] исследовано время доступности сервисов облачной среды в зависимости от;максимальной скорости передачи данных, типов применяемых протоколов маршрутизации и передачи данных, количества и параметров движения транспортных средств.
 
 \end{itemize}
-
-
-
-
