--- a/implementation.tex
+++ b/implementation.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Реализация среды моделирования передачи сообщений в сети автомобилей.} Основным методом исследования времени доступности является имитационное моделирование функционирования абонентов сети в среде ns--3 (дискретно-событийный стимулятор телекоммуникационных систем\cite{Nsnam.org}).
+{\bf{\SetMySection}Реализация среды моделирования передачи сообщений в сети автомобилей.} Основным методом исследования времени доступности является имитационное моделирование функционирования абонентов сети в среде ns--3 (дискретно-событийный стимулятор телекоммуникационных систем\cite{Nsnam.org}).
  
 Симулятор ns--3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns--3 открыты для исследования, модификации и использования и доступны на сайте проекта\cite{Nsnam.org}. В качестве встроенного языка описания моделей используются: C++ и Python.
 
@@ -8,7 +8,7 @@
 
 Модель IDM описывает движение транспортного средства (ТС) по сети дорог, учитывая расположение ТС на полосах движения, габаритные размеры ТС, дистанцию между ТС, поведение ТС при смене полосы движения, направление движения полос, среднюю скорость движения и ускорение в заданной полосе, сигналы светофоров, распределение транспортных потоков на перекрёстках\cite{5678993}.
 
-{\bf{\SetMySubSection} Среда постановки эксперимента для мультипротокольной сети транспортных средств\cite{Instrumental}.} Для эффективного управления данными к среде моделирования были выдвинуты следующие требования:
+{\bf{\SetMySubSection}Среда постановки эксперимента для мультипротокольной сети транспортных средств\cite{Instrumental}.} Для эффективного управления данными к среде моделирования были выдвинуты следующие требования:
 
 \begin{itemize}
 
@@ -22,12 +22,12 @@
 \vspace{-10pt}
  \centering{
 \epsfig{file = architecture.eps, width = 6cm}
-\caption{Архитектура среды моделирования.}
+\caption{Схема взаимодействия модулей модели с ns--3.}
  \label{fig:architecture}}
 \vspace{-6pt}
 \end{figure}
 
-На рисунке ~\ref{fig:architecture} приведена схема взаимодейсвия модулей модели мультипротокольной сети со средой моделирования ns--3.
+На рис.~\ref{fig:architecture} приведена схема взаимодействия модулей модели мультипротокольной сети со средой моделирования ns--3.
 
 В модели используются стандартные модули ns-3 и утилиты анализа результатов экспериментов: 
 
@@ -48,7 +48,7 @@
  
 Для реализации комбинации беспроводных сетей разработана модель подвижного мультипротокольного узла с набором сетевых интерфейсов. Для реализации мультипротокольного узла добавлен новый класс, позволяющий комбинировать интерфейсы стандартов: 802.11abg, 802.11s, 802.11p, LTE. 
 
-{\bf{\SetMySubSection} Реализация мультипротокольного узла в среде моделирования.}
+{\bf{\SetMySubSection}Реализация мультипротокольного узла в среде моделирования.}
 Для проведения эксперимента была создана модель узла, позволяющая осуществлять доставку пакетов между интерфейсом mesh-сети для сетей 802.11s и интерфейсом LTE. Модель мультипротокольного узла реализована добавлением виртуального узла точка--точка, обеспечивающего передачу маршрутизируемых пакетов между интерфейсами 802.11s и LTE.
 Модель узла реализующая функцию маршрутизации сообщений между сетями передачи данных 802.11s и LTE показана на рисунке~\ref{fig:multiprotocol_realisation}.
 
@@ -65,4 +65,4 @@
 
 Мультипротокольный узел связан с транспортным средством, его координаты  наследуются от координат автомобиля. Перемещение автомобиля осуществляется дискретно с интервалом 0.1 секунда, в течение всего периода моделирования.
 
-{\bf{\SetMySubSection} Параметры эксперимента.} Для проведения исследований разработана пакетная технология инициализации параметров моделирования, обеспечивающая изменения значений параметров модели, к которым относятся:  изменение скорости и траектории движения; протокол маршрутизации; тип транспортного протокола передачи данных; скорость передачи данных; число узлов сети; количество узлов ведущих одновременную передачу; размер передаваемых пакетов; процент потерь пакетов в канале. В процессе моделирования для каждого узла регистрируется: время отправки пакета, время получения пакета, число потерянных пакетов, число отправленных пакетов, размер пакетов, IP адреса источников и получателей сообщений. Данные сохраняются в XML файл и доступны для последующего анализа.
+{\bf{\SetMySubSection}Параметры эксперимента.} Для проведения исследований разработана пакетная технология инициализации параметров моделирования, обеспечивающая изменения значений параметров модели, к которым относятся:  изменение скорости и траектории движения; протокол маршрутизации; тип транспортного протокола передачи данных; скорость передачи данных; число узлов сети; количество узлов ведущих одновременную передачу; размер передаваемых пакетов; процент потерь пакетов в канале. В процессе моделирования для каждого узла регистрируется: время отправки пакета, время получения пакета, число потерянных пакетов, число отправленных пакетов, размер пакетов, IP адреса источников и получателей сообщений. Данные сохраняются в XML файл и доступны для последующего анализа.
