--- a/summary.tex
+++ b/summary.tex
@@ -9,15 +9,15 @@
 {\em Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} \textbf{Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}
 
 {\small
-Эксплуатация современного автомобиля тесно связана с использованием разобщённых информационных ресурсов, предоставляющих водителю и пассажирам разнообразные услуги и сервисы. 
-
 Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть. Целью создания такой сети являются повышение безопасности и комфорта участников дорожного движения.
 
-Обмен информационными сообщениями между автомобилем и облачной средой осуществляется через выделенный канал связи. Посредством этого обмена, облачная среда осуществляет сбор статистических данных, как о конкретных автомобилях, так и о дорожной обстановке, конечные пользователи получают доступ к службам экстренной помощи, информационным, справочным и развлекательным ресурсам.
+%Эксплуатация современного автомобиля сопряжена с использованием разобщённых информационных ресурсов, предоставляющих водителю и пассажирам разнообразные услуги и сервисы. 
 
-Проблемой доступа к сервисам облачной среды становится отсутствие непрерывно существующего выделенного беспроводного канала связи, что приводит к отказу обслуживания или необходимости использования альтернативных каналов связи. 
+Обмен сообщениями между автомобилем и облачной средой осуществляется через выделенный канал связи. Посредством этого канала, облачная среда собирает  данные о автомобилях и дорожной обстановке, пользователи получают доступ к службам экстренной помощи, информационным, справочным и развлекательным ресурсам.
 
-Канал передачи данных организуется при помощи автомобильных телематических устройств или персональных устройств пользователя, таких как смартфоны, лэптопы и общедоступные сотовые сети передачи данных.
+Проблемой доступа к сервисам облачной среды является отсутствие непрерывно существующего выделенного беспроводного канала связи, что приводит к отказу в обслуживании. 
+
+%Канал передачи данных организуется при помощи автомобильных телематических устройств или персональных устройств пользователя, таких как смартфоны, лэптопы и общедоступные сотовые сети передачи данных.
 
 Решением, позволяющим улучшить качество доступа к сервисам облачной среды, является применение mesh сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных.
 
