--- a/research.tex
+++ b/research.tex
@@ -1,32 +1,32 @@
-{\bf{\SetMySection} Исследование.} На основе разработанной инструментальной среды была проведена серия экспериментов по передаче коротких сообщений между абонентами mesh-сети, позволяющая выявить насколько устойчивы сети передачи данных на высокодинамичных участках дорожной сети.
+{\bf{\SetMySection} Исследование.} Выбор значений параметров модели обусловлен необходимостью исследования mesh сети в наиболее динамичные периоды её существования, характеризующиеся коротким временем жизни, широким диапазоном интенсивности сетевого трафика, высокой частотой перераспределения маршрутов.
 
-{\bf{\SetMySubSection} Исходные данные для экспериментов.} Для проведения экспериментов определена область допустимых значений изменяемых параметров:
+{\bf{\SetMySubSection} Исходные данные для экспериментов.} Для проведения экспериментов выполнена настройка значений параметров:
 
 \begin{itemize}
 
-\item рассматриваемые сети 802.11s, LTE;
+\item сети: 802.11s, LTE;
 
-\item количество узлов сети 4-16;
+\item количество узлов сети: 4-16;
 
-\item фрагмент проезжей части 800 м. с 4-я поворотами 90 градусов и с двусторонним движением;
+\item фрагмент проезжей части: 800 м. с 4-я поворотами 90 градусов движение двустороннее;
 
-\item интенсивность передачи данных от узла к облачной среде 8-2048 Кбит/сек;
+\item скорость передачи данных: 8-2048 Кбит/сек;
 
-\item размер сообщений 1024 байт;
+\item размер сообщений: 1024 байт;
 
-\item протоколы маршрутизации HWMP, OLSR, AODV, DSDV;
+\item протоколы маршрутизации: HWMP, OLSR, AODV, DSDV;
 
-\item тип трафика TCP, UDP;
+\item протокол передачи данных: TCP, UDP;
 
-\item до четверти узлов mesh сети оснащены интерфейсом LTE (осуществляет передачу данных в облачную среду), данные от остальных участников сети передаются через них.
+\item число узлов с интерфейсом LTE: 1-4.
 
 \end{itemize}
 
-Заданная такими границами область значений параметров моделирования позволяет исследовать наиболее динамичные периоды существования mesh сети (короткое время жизни сети, широкий диапазон интенсивности сетевого трафика, высокая интенсивность перераспределения маршрутов).
+С выбранными параметрами выполнена серия экспериментов по передаче экстренных сообщений между абонентами mesh-сети и облачной средой, позволяющая определить время доступности сервисов облачной среды для мобильных абонентов.
 
-{\bf{\SetMySubSection} Анализ результатов исследования.}  В рамках данной работы, посредством использования созданной модели автомобильной mesh сети, реализованной на основе модели движения транспорта IDM и дискретно-событийного симулятора компьютерных сетей ns--3 была проведена серия экспериментов, позволяющих проанализировать свойства исследуемых сетей.
+{\bf{\SetMySubSection} Анализ результатов исследования.} Комбинации значений параметров применялись для реализации двух серий экспериментов: влияние протоколов маршрутизации на процент потерь при различных скоростях передачи данных и влияние скоростей транспортных средств и числа мультипротокольных узлов на потери сообщений при изменяемой скоростях передачи данных. 
 
-{\bf{\SetMySubSubSection} Оценка отношений расчётной и фактической скоростей передачи сообщений.} Одной из основных причин появления отличий между реальной и рассчётной скоростями передачи данных является использование служебного трафика, в частности, необходимого для обеспечения работы протоколов маршрутизации, что особенно актуально в мобильных mesh сетях для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Для сравнения были рассмотрены следующие протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UPD трафик передаваемый со скоростями 8, 32, 64, 128,512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рисунке~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к реальной.
+{\bf{\SetMySubSubSection} Влияние протоколов маршрутизации на потери сообщений.} Причиной появления отличий между реальной и максимально возможной скоростями передачи данных в mеsh является наличие служебного трафика, необходимого для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Рассмотрены протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UDP трафик передаваемый со скоростями 8, 32, 64, 128, 512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рис.~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к максимально возможной.
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -47,27 +47,11 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-Интервал падения фактической скорости составляет 5-37\%. Значительное падение реальной скорости передачи данных (до 37\%) наблюдается при скоростях более 1024 Кб/сек. Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наилучшие результаты демонстрирует протокол HWMP.
+Снижение фактической скорости составляет 5-37\%. Значительное падение реальной скорости передачи данных, до 37\%, наблюдается при скоростях передачи более 1024 Кб/сек. Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наилучшие результаты демонстрирует протокол HWMP.
 
-{\bf{\SetMySubSubSection} Оценка достоверности доставки сообщений.} Достоверность доставки сообщений оценивалась для наиболее сложных случаев существования сети, в которых изменение структуры сети происходит в течении 1 сек. Для данной ситуации характерна постоянная работа протоколов маршрутизации и процент потерь сообщений может быть значительным. Моделирование проводилось со следующим набором параметров:
+{\bf{\SetMySubSubSection} Влияние параметров движения транспортных средств и протоколов на потери сообщений.} Достоверность доставки сообщений оценивалась для наиболее сложных случаев существования сети, в которых изменение структуры сети происходит в течении 1 сек. Для данной ситуации характерна постоянная работа протоколов маршрутизации и процент потерь сообщений может быть значительным. 
 
-\begin{itemize}
-
-\item[$-$] Число подвижных узлов-ретрансляторов фиксировано --- 16.
-
-\item[$-$] Скорость передачи сообщений (от 8 до 2048 Кбит/сек.).
-
-\item[$-$] Размер передаваемого сообщения фиксирован --- 1024 байт.
-
-\item[$-$] Максимальная корость движениея узла 50 км/час.
-
-\item[$-$] Фрагмент проезжей части 800м с 4-я поворотами 90 градусов.
-
-\item[$-$] 4 протокола маршрутизации: OLSR, HWMP, DSDV, AODV.
-
-\end{itemize}
-
-На рисунке рисунок~\ref{fig:speed_lost} приведена зависимость процента потерянных сообщений, передаваемых от узла сети 802.11s к облачной среде при использовании различных протоколов беспроводной маршрутизации и сообщений разного размера. 
+На рисунке рис.~\ref{fig:speed_lost} приведена зависимость процента потерянных сообщений, передаваемых от узла сети 802.11s к облачной среде от использованных протоколов беспроводной маршрутизации и размера сообщений. 
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -78,56 +62,34 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-Диапазон потерянных сообщений составляет 10 - 46\%. С увеличением скорости передачи он возрастаем примерно в три раза. Наибольшие потери сообщений возникают при использовании протокола OLSR, который не следует использовать для передачи потоковых данных без применения усложнённых механизмов передачи.
+Потеря сообщений составила от 10 до 46\% от первоначального объёма. Потери растут с увеличением скорости передачи и при увеличении скорости передачи в два раза потеря сообщений увеличивается в три раза. Наибольшие потери сообщений возникают при использовании протокола OLSR, который не следует использовать для передачи потоковых данных без применения усложнённых механизмов передачи.
 
-{\bf{\SetMySubSubSection} Оценка среднего значения задержки отклика от облачной среды.} Исследование среднего времени передачи сообщения от абонента к облаку определялась для сетей с 8 и 16 мобильными узлами, при использовании протокола маршрутизации HWMP.
+{\bf{\SetMySubSubSection} Оценка времени отклика облачной среды.} Исследование среднего времени передачи сообщения от абонента к облаку определялась для сетей с 8 и 16 мобильными узлами, при использовании протокола маршрутизации HWMP. Ответное сообщение передавалось от стационарного узла LTE к мобильному абоненту по mesh сети.
 
-В процессе моделирования были заданы следующие значения параметров:
-
-\begin{itemize}
-
-\item[$-$] средняя скорость передачи 512 Кбит/сек,
-
-\item[$-$] TCP трафик,
-
-\item[$-$] размер сообщения 1024 байт,
-
-\item[$-$] фрагмент четырёхполосной проезжей части 800 м. с 4 поворотами 90 градусов,
-
-\item[$-$] максимальная скорость движения узлов 50 км/ч.
-
-\end{itemize}
-
-Для 8 узлов (1 автомобиль на 100 м. проезжей части), при этих параметрах, среднее время доставки сообщения от абонента в облачную среду составило 70,41 мс.; для 16 узлов 4,04 мс. Уменьшение времени доставки сообщений в сети с 16-ю узлами (2 автомобиля на 100 м. проезжей части) связано возможностью построения дополнительных маршрутов передачи данных.
-
-В рамках данного эксперимента проводились исследования возможности доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом LTE для передачи экстренного сообщения в облачную среду. Передача сообщения от аварийного автомобиля возможна при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s. В первом эксперименте определялся процент потерь сообщений от максимальной скорости движения автомобилей при разной плотности потока автомобилей оснащённых интерфейсом 802.11s.(рис.9).
-
-\ref{fig:alarm_densety}.
+В перовом эксперименте серии проводилось исследование возможности доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом LTE для передачи экстренного сообщения в облачную среду. Передача сообщения от аварийного автомобиля возможна при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s. В первом эксперименте определялся процент потерь сообщений от максимальной скорости движения автомобилей при разной плотности потока автомобилей оснащённых интерфейсом 802.11s.
  
+Для 8 узлов, что соответствует примерно 1 автомобилю на 100 метров проезжей части, среднее время доставки сообщения от абонента в облачную среду составило 70,41 мс; для 16 узлов --- 4,04 мс. Уменьшение времени доставки сообщений в сети с 16-ю узлами --- 2 автомобиля на 100 м проезжей части, связано возможностью построения дополнительных маршрутов передачи данных.
+
 \begin{figure}[!ht]
-% \vspace{-0.2cm}
  \centering{
  \epsfig{file = alarm_densety.eps, width = 6cm}
  \caption{Зависимость процента потерь сообщений, передаваемых аварийным автомобилем, от плотности и скорости движения автомобилей.}
  \label{fig:alarm_densety}}
-% \vspace{-0.1cm}
 \end{figure}
 
-Зависимость на рис~\ref{fig:alarm_densety} показывает, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы, практически все переданные сообщения не доходят до адресата. Процент потерь составляет 78-92\%. Из этого следует, что при таком режиме движения необходимо либо увеличивать плотность машин находящихся в радиусе действия передатчика mesh (802.11s), что позволит использовать больше альтернативных путей доставки сообщений. Другим вариантом решения проблемы с небольшой плотностью машин, оснащённых передатчиками 802.11s, является использование альтернативной технологии передачи - DSRC или использование прямых глобальных каналов точка-точка (LTE, WiMAX).
+Зависимость на рис.~\ref{fig:alarm_densety} показывает, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы процент потерь составляет 78-92\%. Из этого следует, что при таком режиме движения необходимо либо увеличивать плотность машин находящихся в радиусе действия передатчика mesh, что позволит использовать больше альтернативных путей доставки сообщений. Другим вариантом решения проблемы с небольшой плотностью машин, оснащённых передатчиками 802.11s, является использование альтернативной технологии передачи --- DSRC или использование прямых глобальных каналов точка-точка (LTE, WiMAX).
 
-Во втором эксперименте проводилось исследование возможности доставки сообщения от аварийного автомобиля, средствами 802.11s до хотя бы одного автомобиля оборудованного 802.11s и LTE на прямом участке 4-х полосного шоссе протяжённостью 800 метров (рис.10). 
+Во втором эксперименте серии проводилось исследование возможности доставки сообщения от аварийного автомобиля, средствами 802.11s до хотя бы одного автомобиля оборудованного 802.11s и LTE на прямом участке 4-х полосного шоссе протяжённостью 800 метров. 
 
 \begin{figure}[!ht]
-% \vspace{-0.2cm}
+
  \centering{
  \epsfig{file = alarm_speed.eps, width = 6cm}
- \caption{Зависимость доставленных сообщений от скорости движения автомобиля и числа автомобилей оснащенными интерфейсом LTE.}
+ \caption{Зависимость доставленных сообщений от скорости движения автомобиля и числа автомобилей оснащёнными интерфейсом LTE.}
  \label{fig:alarm_speed}}
-% \vspace{-0.1cm}
+
 \end{figure}
 
-Зависимость процента потерь сообщений от скорости движения автомобиля и числа автомобилей оснащенными интерфейсом LTE.
+На рис.~\ref{fig:alarm_speed} приведена зависимость процента потерь сообщений при плотности потока автомобилей, оснащённых интерфейсом 802.11s, --- 2 машины на 100 метров и при оснащённости потока автомобилей интерфейсом LTE на 25\%, 12\%, 6\%, 3\%.
 
-На рисунке~\ref{fig:alarm_speed} приведена зависимость процента потерь сообщений при плотности потока автомобилей, оснащённых интерфейсом 802.11s, --- 2 машины на 100 метров и при оснащённости потока автомобилей интерфейсом LTE на 25\%, 12\%, 6\%, 3\%.
-
-По результатам моделирования можно сделать вывод о том, что при оснащении устройствами LTE менее 25\% автомобилей процент потерь сообщений становится значительным уже при скорости 50 миль/час. В этом случае целесообразно использовать альтернативные протоколы отправки сообщений в облачную среду, такие как DSRC (при наличии покрытия дороги).
+По результатам моделирования можно сделать вывод о том, что при оснащении устройствами LTE менее 25\% автомобилей процент потерь сообщений становится значительным уже при скорости 50 миль в час. В этом случае целесообразно использовать альтернативные протоколы отправки сообщений в облачную среду.
