--- a/summary.tex
+++ b/summary.tex
@@ -6,7 +6,7 @@
 
 \end{center}
 
-{\em Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} \textbf{Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}
+{\em Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} \textbf{Исследование доступности сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}
 
 {\small
 Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть. Целью создания такой сети являются повышение безопасности и комфорта участников дорожного движения.
