мои мелкие правки

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Заключение.} В результате исследования доступности сетевых облачных сервисов в автомобильных сетях выполнено:
+{\bf{\SetMySection} Заключение.} В результате исследования доступности сетевых облачных сервисов в автомобильных сетях:
 
 \begin{itemize}
 
