--- a/research.tex
+++ b/research.tex
@@ -8,7 +8,7 @@
 
 \item количество узлов сети: 4-16;
 
-\item фрагмент проезжей части: 800 м. с 4-€ поворотами 90 градусов движение двустороннее;
+\item фрагмент проезжей части: 800 м. с 4-€ поворотами (90 градусов), движение двустороннее;
 
 \item скорость передачи данных: 8-2048  бит/сек;
 
