--- a/summary.tex
+++ b/summary.tex
@@ -36,6 +36,6 @@
 
 \end{center}
 
-{\em Glazunov~V.\,V., Kurochkin~L.\,M., Kurochkin~M.\,A., Popov~S.\,G.\/} \textbf{Article name Article name Article name.}
+{\em Glazunov~V.\,V., Kurochkin~L.\,M., Kurochkin~M.\,A., Popov~S.\,G.\/} \textbf{The research of service availability of mobile users in cloud oriented multiprotocol surplus network of vehicles.}
 
 {\small Text}
